<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_draw_img"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.syl.viewdemo.activity.DrawImgActivity">
    <HorizontalScrollView android:layout_width="wrap_content"
                          android:layout_height="wrap_content">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <Button android:id="@+id/btn_draw_img1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="click"
                    android:text="@string/btn_draw_img1"/>
            <Button android:id="@+id/btn_draw_img2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="click"
                    android:text="@string/btn_draw_img2"/>
            <Button android:id="@+id/btn_draw_img3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="click"
                    android:text="@string/btn_draw_img3"/>
            <Button android:id="@+id/btn_draw_img4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="click"
                    android:text="@string/btn_draw_img4"/>
            <Button android:id="@+id/btn_draw_img5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="click"
                    android:text="@string/btn_draw_img5"/>
            <Button android:id="@+id/btn_draw_img6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="click"
                    android:text="@string/btn_draw_img6"/>
        </LinearLayout>
    </HorizontalScrollView>
    <ImageView android:id="@+id/iv_img"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:scaleType="center"/>
</LinearLayout>
