<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_ok_http"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.syl.viewdemo.activity.OkHttpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button android:id="@+id/btn_https_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_https_get"
                android:textAllCaps="false"/>
        <Button android:id="@+id/btn_https_get2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_https_get2"
                android:textAllCaps="false"/>
        <Button android:id="@+id/btn_https_get3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_https_get3"
                android:textAllCaps="false"/>
        <TextView android:id="@+id/tv_content"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:scrollbars="vertical"/>
        <ImageView android:id="@+id/iv_img"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"/>
        <WebView android:id="@+id/wv_web"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>